# chaos-monkey

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  init-project.md
.github/workflows/: ci.yml
apps/storefront/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
apps/storefront/src/: App.tsx  session.ts
apps/storefront/test/: app.test.tsx  cartClient.test.ts  session.test.ts
docs/adr/: 0001-reserve-then-commit-checkout.md  0002-monorepo-layout.md  0003-aks-demo-kind-local.md  0004-typescript-python-service-split.md  0005-catalog-static-seed-interim.md
docs/agents/: domain.md  issue-tracker.md
docs/research/: local-k8s-dev-stack.md
docs/spec/: api-contracts.md  chaos-experiments.md  cicd.md  deployment-topology.md  domain-docs-maintenance.md  portfolio-documentation.md  repository-layout.md  resilience.md  storefront-ui.md
infra/k8s/chaos-monkey/: Chart.yaml  values-aks.yaml  values-kind.yaml  values.yaml
infra/scripts/: deploy-app.sh  kind-cluster.yaml  kind-up.sh  platform-install.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
services/cart-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/cart-service/src/: app.ts  cart-store.ts  domain.ts  server.ts  validation.ts
services/checkout-service/: package-lock.json  package.json
services/inventory-service/: .dockerignore  Dockerfile  pyproject.toml
services/inventory-service/src/inventory_service/: app.py  catalog_seed.py
services/inventory-service/tests/: test_catalog.py  test_healthz.py
(+13 files in other folders)
